--- a/ms.css
+++ b/ms.css
@@ -24,8 +24,20 @@ body {
 
 .pushed{
 	background-color: #dddddd;
-	box-shadow: 3px 3px 3px rgba(0,0,0,0.5) inset;
+}
 
+.shadow_tl{
+	box-shadow: 5px 5px 3px -3px rgba(0,0,0,0.5) inset;
+}
+.shadow_t{
+	box-shadow: 0px 5px 3px -3px rgba(0,0,0,0.5) inset;
+}
+.shadow_l{
+	box-shadow: 5px 0px 3px -3px rgba(0,0,0,0.5) inset;
+}
+
+.pushedMine{
+	background-color: #ff4444;
 }
 
 
