--- a/ms.css
+++ b/ms.css
@@ -1,13 +1,18 @@
 body {
 	margin: 50px;
-	background-color: #333333;
+	background-color: #444444;
 	color: #ffffff;
-} 
+}
+
+#field{
+	display: inline-block;
+}
 
 .grid{
 	display: inline-block;
 	margin-bottom: -6px;
-	background-color: #ffffff;
+	background: #ffffff url(grid.png);
+	background-size: cover;
 	width: 30px;
 	height: 30px;
 }
@@ -37,7 +42,21 @@ body {
 }
 
 .pushedMine{
-	background-color: #ff4444;
+	background-image: url(mine.png);
+	background-size: cover;
+}
+
+.putFlag{
+	background-image: url(flag.png);
+	background-size: cover;
+}
+
+.m1{
+	background-image: url(flag.png);
+}
+
+.cleared{
+	box-shadow: 0px 0px 10px rgba(255,230,200,0.8);
 }
 
 
