--- a/ms.css
+++ b/ms.css
@@ -70,6 +70,18 @@ body {
 	background-image: url(5.png);
 	background-size: cover;
 }
+.m6{
+	background-image: url(5.png);
+	background-size: cover;
+}
+.m7{
+	background-image: url(5.png);
+	background-size: cover;
+}
+.m8{
+	background-image: url(5.png);
+	background-size: cover;
+}
 
 .cleared{
 	box-shadow: 0px 0px 10px rgba(255,230,180,1);
